# Congressional-Hackathon-2025

./: .gitignore  Committee-Youtube-Channels.json  GetLawJsons.ipynb  Legislative-Branch-Data-Map.md  README.md  app.py  batch_analyzer.py  index.html  package.json  pyproject.toml  requirements.txt  vercel.json
PolicyEngine/: README.md  plot_income_stats.py
capitol-voices/: CONGRESSIONAL_INTEGRATION.md  HACKATHON_PRESENTATION.md  HACKATHON_README.md  HACKATHON_SUBMISSION_CHECKLIST.md  POSTGRESQL_SETUP_GUIDE.md  POSTGRESQL_SUMMARY.md  PROJECT_SUBMISSION.md  PULL_REQUEST.md  README.md  SUBMISSION_SUMMARY.md  YOUTUBE_INTEGRATION_GUIDE.md  cli.py  congress_api_integration.py  demo_congressional_setup.py  demo_postgresql_setup.py  demo_youtube_processor.py  download_real_hearing.py  generate_demo_data.py  requirements-dev.txt  requirements.txt  setup_postgresql.py  (+4 more)
congresstrack/: .env.example  README.md  app.py  batch_analyzer.py  passed_law_pipeline.py  pyproject.toml  requirements.txt
congresstrack/data/: S.119.201.json
congresstrack/docs/: Problem Statement.md
congresstrack/noteboooks/: GetLawJsons.ipynb
transcript-generation/: .env.example  .gitignore  README.md  SETUP_AUTOMATION.md  main.py  main_filtered.py  new_videos_20250917_110630.csv  new_videos_log.json  notifier.py  pyproject.toml  recent_videos.csv  recent_videos.json  recent_videos_filtered.csv  recent_videos_filtered.json  run_monitor.sh  setup.sh  setup_cron.sh  transcribe.py  video_database.json  video_monitor.py  youtube_audio.py
transcript-generation/.cursor/rules/: functional-style.mdc
(+169 files in other folders)
